Bug 45869 - PDF: PDF conversion different from Page Preview in calc
Summary: PDF: PDF conversion different from Page Preview in calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:3.7.0
Keywords:
: 53079 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-10 01:02 UTC by Josh Kim
Modified: 2012-08-03 06:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
problematic ODS file (45.29 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-02-10 01:02 UTC, Josh Kim
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Josh Kim 2012-02-10 01:02:21 UTC
Created attachment 56851 [details]
problematic ODS file

Problem description: 
When converting a spreadsheet document into a PDF file, the footer content which fits in a single line is shifted to the next line. 

Steps to reproduce:
1. ....Open attached ODS file.
2. .... Export as PDF (either by pressing a toolbar button or via menu.
3. .... Once exported, check the PDF file and compare with the ODS.

Current behavior:

Expected behavior:

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:10.0) Gecko/20100101 Firefox/10.0
Comment 1 sasha.libreoffice 2012-05-17 04:59:16 UTC
Thanks for bugreport
reproducible in 3.5.3 on Windows 7 32 bit and on Fedora 64 bit
and in 3.4.2 on Windows XP
in Printer Preview we see one line in footer, but on PDF appears 2

in 3.3.4 on Fedora both Printer Preview and PDF shows 2 lines in footer
(so, possible regression after 3.3.4)

Changing version to 3.4.2 as most early reproduced
Comment 2 sasha.libreoffice 2012-05-17 05:01:15 UTC
@ Kohei
Greetings
What do You think about this bug?
Comment 3 Kohei Yoshida 2012-05-18 07:21:25 UTC
In my environment both print preview and pdf export show two lines of footer output.  I don't see any issue here.

I'm using 3.5.3.2 from openSUSE repo.
Comment 4 sasha.libreoffice 2012-05-18 07:50:31 UTC
Thanks for additional information. Therefore it may be distro-specific problem.
Comment 5 Josh Kim 2012-05-23 00:38:00 UTC
The phenomenon is reproducible under LO 3.5.3 for Windows (x64)
PDF converting program such as PDFill converts the ODS without any problem. (single-line footer instead of double-line)
Comment 6 sasha.libreoffice 2012-05-23 02:11:43 UTC
@ Kisuk Kim
Thanks for additional testing. Version is most old version where reproducible, not current version. Changing settings back.
Comment 7 sasha.libreoffice 2012-05-23 02:13:42 UTC
@ Caolan
Greetings
What do You think about this bug?
Comment 8 Caolán McNamara 2012-06-21 13:31:54 UTC
I can reproduce oddities  with master on x86_64. One line in "page preview" but two lines in the preview in the print dialog.

sasha, when you say "Printer Preview" do you mean "file->page preview" or the preview image in the print dialog from "file->Print..."
Comment 9 sasha.libreoffice 2012-06-21 23:43:00 UTC
It is File->Page preview. Sorry for incorrect term.
It reproducible in 3.5.4 on Fedora 64 bit, but not reproducible in 3.6.beta1
Comment 10 Caolán McNamara 2012-06-22 04:27:06 UTC
I can still see the problem. A lot would likely depend on what fonts you have installed, but what I believe is the issue is that when we print or export to pdf we (obviously enough) figure out the best positions for glyph placement for the target device dpi. *But* for the calc page preview window we set the text EditEngine reference device to the window we render into which is 96 dpi. So we have an ideal placement of text for rendering into a window, but that's not what we want in a print preview window surely.

i.e. two lines should be seen in the pdf and page preview window
Comment 11 Not Assigned 2012-06-22 04:31:22 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d29318c78a13f5de031d181b79a655d324ecdf25

Resolves: fdo#45869 we want page preview text to layout for print output
Comment 12 sasha.libreoffice 2012-06-24 23:03:00 UTC
Thanks for fixing this bug
Comment 13 Josh Kim 2012-06-26 23:00:26 UTC
Thanks all for looking into this issue. This fix will surely make my work more productive as I've been using a PDF printer driver as an alternative solution. Kudos to Caolán for his effort.
Comment 14 Jean-Baptiste Faure 2012-08-03 06:30:39 UTC
*** Bug 53079 has been marked as a duplicate of this bug. ***